outputs/tsp_constructive-constructive/mcts-ahd/2025-09-23_14-11-57/evaluations/problem_eval8367782849969118550_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance metric that combines centrality with future potential, while using a progressive weighting scheme that emphasizes immediate distance early and long-term optimization later, with exploration bonuses scaled by both node centrality and remaining path length.}
                                                                                                                                                                                                                                                                              ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance metric that combines centrality with future potential, while using a progressive weighting scheme that emphasizes immediate distance early and long-term optimization later, with exploration bonuses scaled by both node centrality and remaining path length.}
                                                                                                                                                                                                                                                                              ^
SyntaxError: unmatched '}'
